--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ zellij-tile = "0.40.0"
 chrono = "0.4.0"
 tracing-subscriber = "0.3.18"
 tracing = "0.1.40"
+shlex = "1.3.0"
 
 [features]
 tracing = []
