--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,10 +15,10 @@ jobs:
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: '1.76.0'
+          toolchain: 'stable'
           profile: minimal
           override: true
-          target: wasm32-wasi
+          target: wasm32-wasip1
           components: clippy
 
       - name: Run Clippy
