--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,3 @@
-
 ---
 name: Release
 permissions: write-all
@@ -23,10 +22,10 @@ jobs:
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: '1.76.0'
+          toolchain: 'stable'
           profile: minimal
           override: true
-          target: wasm32-wasi
+          target: wasm32-wasip1
 
       - name: Build release binary
         run: cargo build --release
@@ -58,6 +57,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./target/wasm32-wasi/release/zjpane.wasm
+          asset_path: ./target/wasm32-wasip1/release/zjpane.wasm
           asset_name: zjpane.wasm
           asset_content_type: application/octet-stream
